Move configs over to new dir

--- a/.ansible/bootstrap.yml
+++ b/.ansible/bootstrap.yml
@@ -12,10 +12,10 @@
       tags:
         - common
 
-    - role: lsd
-      tags:
-        - lsd
-
-    - role: starship
-      tags:
-        - starship
+#    - role: lsd
+#      tags:
+#        - lsd
+#
+#    - role: starship
+#      tags:
+#        - starship
