More updates from runnin on another host

--- a/.ansible/roles/bootstrap-common/tasks/main.yml
+++ b/.ansible/roles/bootstrap-common/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 
+- name: "Gather package facts"
+  package_facts:
+    manager: "auto"
+
 - name: Create base directories
   file:
     path: "~/{{ item }}"
