--- a/configs/dot.tmux.conf
+++ b/configs/dot.tmux.conf
@@ -40,8 +40,10 @@ set-option -g visual-bell on
 set-option -g renumber-windows on
 
 set-option -g   set-titles on
-set-option -g   set-titles-string ' #I-#W '
-set-option -g   terminal-overrides 'xterm*:smcup@:rmcup@'  # Fix issue with Shift-Page{Up|Down}
+#set-option -g   set-titles-string "#{pane_title}@#{host_short}"
+set-option -g   set-titles-string "@#{host_short}"
+#set-option -g   terminal-overrides 'xterm*:smcup@:rmcup@'  # Fix issue with Shift-Page{Up|Down}
+set-option -g   terminal-overrides 'xterm*:XT:smcup@:rmcup@'  # Fix issue with Shift-Page{Up|Down}
 set-option -g   base-index 1
 set-option -g   pane-base-index 1
 
