--- a/configs/dot.tmux.conf
+++ b/configs/dot.tmux.conf
@@ -29,7 +29,8 @@ unbind-key %   # split-window -h
 # All kind of nice options
 set-option -g bell-action any
 #set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
-set-option -g default-terminal screen-256color  # Adjust term to use 256 colors.
+set-option -g default-shell /bin/zsh
+set-option -g default-terminal tmux-256color  # Adjust term to use 256 colors.
 set-option -g history-limit 100000  # Use a BIG scrollback history buffer.
 set-option -g mouse on  # Enable mouse mode, 2.1
 set-option -g repeat-time 500  # Allow multiple commands without pressing prefix-key.
