--- a/configs/dot.config/nvim/coc-settings.json
+++ b/configs/dot.config/nvim/coc-settings.json
@@ -19,5 +19,10 @@
       ],
       "initializationOptions": {}
     }
+  },
+  "typescript.format.enabled": true,
+  "markdownlint.config": {
+    "default": true,
+    "line_length": true
   }
 }
