Tune tmux window statusbar bell/activity colors

--- a/configs/dot.tmux.conf
+++ b/configs/dot.tmux.conf
@@ -72,17 +72,26 @@ set-option -g   pane-base-index 1
 # green:   #859900
 
 # default statusbar colors
-set-option -ag   status-style "bg=#002b36"  # base03
-set-option -ag   status-style "fg=#586e75"  # base01
+set-option -ag   status-style bg="#002b36"  # base03
+set-option -ag   status-style fg="#586e75"  # base01
 
 # default window title colors
-set-option -ag   window-status-style "bg=#002b36"  # base03
-set-option -ag   window-status-style "fg=#586e75"  # base01
+set-option -ag   window-status-style bg="#002b36"  # base03
+set-option -ag   window-status-style fg="#586e75"  # base01
 
 # active window title colors
-set-window-option -ag window-status-current-style bg="#073642"  # base02
-#set-window-option -ag window-status-current-style fg="#586375"  # base01
-set-window-option -ag window-status-current-style fg="#b58900"  # yellow
+set-window-option -ag window-status-current-style bg="#586e75"  # base01
+set-window-option -ag window-status-current-style fg="#eee8d5"  # base2
+
+# window activity statusbar
+set-window-option -ag window-status-activity-style bg="#002b36"  # base03
+set-window-option -ag window-status-activity-style fg="#cb4b16"  # orange
+set-window-option -ag window-status-activity-style noreverse
+
+# window bell statusbar
+set-window-option -ag window-status-bell-style bg="#002b36"  # base03
+set-window-option -ag window-status-bell-style fg="#dc322f"  # orange
+set-window-option -ag window-status-bell-style noreverse
 
 # pane colors
 set-option -ag   pane-border-style bg=default
