Improvements for mac support

--- a/configs/kitty.conf
+++ b/configs/kitty.conf
@@ -1,11 +1,13 @@
 # Looks
 
-font_family mplus Nerd Font regular
-font_size 8.0
+#font_family mplus Nerd Font regular
+#font_family Menlo regular
+font_family Hack Nerd Font regular
+font_size 10.0
 
 remember_window_size no
-initial_window_width 90c
-initial_window_height 24c
+initial_window_width 100c
+initial_window_height 25c
 
 background_opacity 0.93
 dynamic_background_opacity yes
