--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,23 +4,27 @@ variables:
   ALPINE_IMAGE: alpine:3.15
   PYTHON_IMAGE: python:3.10
   POETRY_VERSION: 1.1.13
+  SHELLCHECK_VERSION: 0.8.0
 
 # Reusable chunks of code
 .bootstrap_poetry: &bootstrap_poetry |
   pip install "poetry==$POETRY_VERSION"
   pip install "poetry-dynamic-versioning"
+  poetry install
   #poetry config experimental.new-installer false  # per https://github.com/python-poetry/poetry/issues/3199
 
 .alpine_setup: &alpine_setup |
-  apk update
-  apk add \
+  apk --update --no-cache add \
     bash \
     coreutils \
     curl \
     findutils \
+    file \
     git \
     grep \
-    make
+    jq \
+    make \
+    sed
 
 stages:
   - lint
@@ -60,5 +64,5 @@ shellcheck:
     - docker
   script:
     - *alpine_setup
-    - curl -sL https://storage.googleapis.com/shellcheck/shellcheck-v0.7.2.linux-x86_64 -o /usr/bin/shellcheck
+    - curl -sL https://storage.googleapis.com/shellcheck/shellcheck-v${SHELLCHECK_VERSION}.linux-x86_64 -o /usr/bin/shellcheck
     - make lint-shellcheck
