--- a/.ansible/roles/bootstrap-common/tasks/shell.yml
+++ b/.ansible/roles/bootstrap-common/tasks/shell.yml
@@ -5,7 +5,7 @@
     state: link
     src: "{{ item.src }}"
     dest: "~/{{ item.dest }}"
-    force: yes
+    force: true
   with_items:
     - {src: "{{ dotfiles_config_dir }}/dot.zshenv", dest: ".zshenv"}
     - {src: "{{ dotfiles_config_dir }}/dot.zshrc", dest: ".zshrc"}
@@ -13,7 +13,6 @@
 
 - name: Install oh-my-zsh
   git:
-    #repo: git@github.com:ohmyzsh/ohmyzsh.git
     repo: https://github.com/ohmyzsh/ohmyzsh.git
     dest: ~/.oh-my-zsh
 
