--- a/configs/kitty.conf
+++ b/configs/kitty.conf
@@ -1,8 +1,15 @@
 # Looks
 
-#font_family mplus Nerd Font regular
+#font_family mplus Nerd Font
 #font_family Menlo regular
-font_family Hack Nerd Font regular
+#font_family Hack Nerd Font Mono
+#font_family Liberation Mono
+#font_family Source Code Pro
+#font_family Nimbus Mono PS
+font_family JetBrainsMono Nerd Font Mono
+#font_family mononoki Nerd Font Mono
+#font_family MesloLGMDZ Nerd Font Mono
+
 font_size 10.0
 
 remember_window_size no
