--- a/configs/dot.config/nvim/coc-settings.json
+++ b/configs/dot.config/nvim/coc-settings.json
@@ -1,22 +1,19 @@
 {
   "coc.preferences.formatOnType": true,
   "coc.preferences.formatOnSaveFiletypes": [
+    "css",
+    "markdown",
+    "json",
     "python",
-    "yaml",
-    "json"
+    "yaml"
   ],
   "python.linting.flake8Enabled": true,
   "python.formatting.provider": "black",
   "languageserver": {
     "terraform": {
       "command": "terraform-ls",
-      "args": [
-        "serve"
-      ],
-      "filetypes": [
-        "terraform",
-        "tf"
-      ],
+      "args": ["serve"],
+      "filetypes": ["terraform", "tf"],
       "initializationOptions": {}
     }
   },
