Remove yaml linter from the mix
This linter is pretty prescriptive and not everyone adopts it's behavior
leading to me seemingly changing a bunch of other things..

--- a/configs/dot.config/nvim/coc-settings.json
+++ b/configs/dot.config/nvim/coc-settings.json
@@ -4,8 +4,7 @@
     "css",
     "markdown",
     "json",
-    "python",
-    "yaml"
+    "python"
   ],
   "python.linting.flake8Enabled": true,
   "python.formatting.provider": "black",
